--- a/_posts/2023-08-10-0726-ko.md
+++ b/_posts/2023-08-10-0726-ko.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "시장 침체를 거스르는 제약주: 일라이 릴리의 성공과 리비안의 놀라운 수익 보고서에 대해 자세히 알아보기 "
+title: "일라이 릴리의 성공과 리비안의 놀라운 수익 보고서"
 author: "Trendy Wolf"
 header-style: text
 lang: en
@@ -28,9 +28,9 @@ tags:
 
 전반적으로 부정적인 분위기에도 불구하고 제약주는 약 4%의 상승률을 기록하며 최고의 성과를 거두었습니다. 특히 일라이 릴리는 매출 가이던스를 상향 조정했고, 노보 노디스크의 비만 치료제인 웨고비는 기대를 모았던 연구에서 유망한 결과를 보여주었습니다. S&P 500 지수에서는 502개 종목 중 153개 종목이 상승세로 마감한 반면 349개 종목은 하락세로 마감했습니다. 가장 높은 성과를 거둔 산업군은 일라이 릴리(Eli Lilly)가 이끄는 제약주와 듀크 에너지(Duke Energy)가 이끄는 유틸리티였습니다. 반대로 칩 제조업체, 의료 장비주, 보험사는 모두 1% 이상 하락했습니다. 
 
-눈에 띄는 종목 및 시판 후 수익 보고서 
 
-##
+
+## 눈에 띄는 종목 및 시판 후 수익 보고서 
 
 주요 평균 중 Novo Nordisk의 ADR은 17%의 상승률로 가장 두드러진 성과를 거두었습니다. 이는 주로 심장마비 및 뇌졸중 위험 감소를 입증한 비만 치료제 웨고비의 긍정적인 결과에 힘입은 것입니다. 일라이 릴리도 약 15%의 큰 폭의 증가를 경험했으며 연간 매출 가이던스를 상향 조정했습니다. 
 
