--- a/_posts/2023-08-10-1714-ko.md
+++ b/_posts/2023-08-10-1714-ko.md
@@ -26,9 +26,9 @@ tags:
 
 지난주 세계적인 신용평가 기관인 Fitch는 미국의 신용등급을 AAA에서 AA+로 강등했습니다. 미국의 부채, 변동성, 거버넌스에 대한 우려로 인해 내린 결정입니다. 알리안츠의 수석 경제 고문인 무하마드 알레리는 이러한 문제가 오래전부터 알려져 왔다는 점에서 신용등급 강등 시점에 놀라움을 표했습니다. 그러나 그는 또한 이번 신용등급 강등이 미국 경제의 민감한 분야에 미치는 영향은 미미할 것으로 예상했습니다. 
 
-신용등급 강등에 대한 
 
-## 관점
+
+## 신용등급 강등에 대한 관점
 
 하버드 대학교 국제경제학 교수이자 전 국제통화기금(IMF) 수석 이코노미스트인 케네스 로고프는 이번 신용등급 강등에 대해 또 다른 관점을 제시했습니다. 그는 피치의 이번 결정이 향후 발생할 수 있는 잠재적 문제에 대한 예견된 조치일 수 있다고 제안했습니다. 로고프는 미국의 제도적 문제와 분열되고 기능 장애가 있는 정부의 가능성을 인정했습니다. 그러나 그는 미국이 강등되면 다른 국가들도 비슷한 문제에 직면하게 될 것이기 때문에 강등될 필요가 있다고 지적했습니다. 로고프는 또한 미국의 신용등급 강등이 반드시 인플레이션을 의미한다고 생각하지는 않지만, 피치가 다른 국제 경제의 신용등급을 강등할 경우 향후 인플레이션 가능성이 높아질 수 있다는 점을 강조했습니다. 
 
