--- a/_posts/2023-08-13-1010-ko.md
+++ b/_posts/2023-08-13-1010-ko.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "노출: 금융 미디어의 잘못된 보도로 인해 소매 투자자들이 수백만 달러의 손해를 본 방법 "
+title: "WeWork 사태를 통해 알아보는 금융 미디어의 논란"
 author: "Trendy Wolf"
 header-style: text
 lang: en
