--- a/_posts/2023-08-14-6443-ko.md
+++ b/_posts/2023-08-14-6443-ko.md
@@ -26,9 +26,9 @@ tags:
 
 지난주 미국 시장은 눈에 띄게 모멘텀이 약화되었으며, 불규칙한 움직임이 특징인 거래일을 보냈습니다. 이러한 둔화는 연방준비제도이사회 정책과 경기침체 가능성과 같은 주요 요인에 대한 명확성이 부족했기 때문일 수 있습니다. 또한 월마트, 타겟, 홈디포, 메이시스 등 주요 소매업체의 실적 발표가 예정되어 있는 점도 시장 성과에 영향을 미쳤습니다. 이러한 보고서는 소비자 행동과 그에 따른 경제에 미치는 영향을 조명할 것으로 예상됩니다. 
 
-주요 지수 및 섹터별 
 
-## 성과
+
+## 주요 지수 및 섹터별 성과
 
 주요 지수 중 다우존스 산업평균지수(DJIA)는 약 0.3% 상승하며 상승세로 마감한 유일한 지수로 눈에 띄었습니다. 이러한 긍정적인 움직임은 셰브론, 머크, 버라이즌, 아메리칸 익스프레스, 하니웰을 포함한 30개 회원사 중 21개 기업이 주도했습니다. 반면, S&P 500 지수는 하루와 한 주 동안 약 0.1% 하락했고, 나스닥 종합 지수는 0.7%로 더 큰 폭의 하락세를 보였습니다. 하지만 러셀 2000 지수는 0.1% 상승하며 소폭 상승 마감했습니다. 
 
