--- a/_posts/2023-08-22-8550-ko.md
+++ b/_posts/2023-08-22-8550-ko.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "대형 은행의 기반이 흔들리고 있는가? 피치 레이팅스의 신용등급 강등 가능성이 우려를 불러일으키고 있습니다! "
+title: "대형 은행의 기반이 흔들리고 있는가? 피치 레이팅스의 신용등급 강등 가능성의 우려"
 author: "Trendy Wolf"
 header-style: text
 lang: en
