--- a/_posts/2023-08-23-3034-ko.md
+++ b/_posts/2023-08-23-3034-ko.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "메드트로닉의 주목할 만한 회계연도 시작: 당뇨병 사업 두 배 성장과 중국 시장 진출 확대 "
+title: "메드트로닉의 주목할 만한 회계연도 시작, 당뇨병 사업 두 배 성장과 중국 시장 진출 확대 "
 author: "Trendy Wolf"
 header-style: text
 lang: en
@@ -17,8 +17,6 @@ tags:
 <img
     src="https://i.ytimg.com/vi/54pqGYjmXkA/hqdefault.jpg"
 />
-
-
 
 
 
