--- a/_posts/2023-08-31-0706-ko.md
+++ b/_posts/2023-08-31-0706-ko.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "파월 의장은 인플레이션에 초점을 맞춘 정책과 중립금리 상승을 약속했습니다: 과거의 교훈과 미래를 위한 주의 사항"
+title: "파월 의장은 인플레이션에 초점을 맞춘 정책과 중립금리 상승의 약속"
 author: "Trendy Wolf"
 header-style: text
 lang: en
