--- a/_posts/2023-09-04-3722-ko.md
+++ b/_posts/2023-09-04-3722-ko.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "성별 임금 격차 해소 및 동일 임금 시행"
+title: "노동력 참여율의 급증과 실업율의 상승. 성별 임금 격차 해소 및 동일 임금 시행"
 author: "Trendy Wolf"
 header-style: text
 lang: en
