--- a/_posts/2023-09-04-4137-ko.md
+++ b/_posts/2023-09-04-4137-ko.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "경제에 대한 대조적인 관점: 낙관론과 신중론, 그리고 금리의 영향"
+title: "경제에 대한 대조적인 관점, 낙관론과 신중론, 그리고 금리의 영향"
 author: "Trendy Wolf"
 header-style: text
 lang: en
