--- a/_posts/2023-09-04-6213-ko.md
+++ b/_posts/2023-09-04-6213-ko.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "비즈니스 확장과 투자 간의 균형 유지"
+title: "바이오웍스와 구글의 파트너쉽, AI모델을 통한 DNA분석 혁신 및 장기적인 투자 균형"
 author: "Trendy Wolf"
 header-style: text
 lang: en
