--- a/_posts/2023-08-09-6764-ko.md
+++ b/_posts/2023-08-09-6764-ko.md
@@ -30,7 +30,9 @@ tags:
 
 향후 3년 이내에 상당수의 대출이 만기될 것으로 예상됩니다. 이는 잠재적으로 가치 평가와 만기 모기지 간의 불일치로 이어질 수 있으며, 이는 은행 산업에 더 큰 부담을 줄 수 있습니다. 이러한 어려움에도 불구하고 실버스타인 프로퍼티는 이러한 역학 관계를 능동적으로 관리하고 있으며 더 많은 인수와 개발의 잠재력을 보고 있습니다. 
 
-인수, 개발 및 도전과제 ## 인수, 개발 및 도전과제
+인수, 개발 및 도전과제 
+
+## 인수, 개발 및 도전과제
 
 최근 Silverstein Properties는 55 Broad Street를 주거용으로 전환할 계획으로 전략적으로 인수했습니다. 이러한 움직임은 시장에서 기회를 파악하고 포착할 수 있는 회사의 능력을 보여줍니다. 이 외에도 오래된 오피스 빌딩을 리테일 공간으로 전환하여 포트폴리오를 더욱 다각화할 수 있는 가능성을 모색하고 있습니다.
 
