--- a/_posts/2023-08-11-8259-ko.md
+++ b/_posts/2023-08-11-8259-ko.md
@@ -26,9 +26,9 @@ tags:
 
 마이클 맥키가 언급했듯이 애틀랜타 GDP는 애틀랜타 지역의 경제 성장을 모니터링하는 데 사용되는 중요한 도구입니다. 애틀랜타 연준의 전 분기 GDP 성장률 예측이 적중했다는 점은 주목할 가치가 있습니다. 그러나 애틀랜타 GDP는 초기 측정치이므로 분기 말의 현실을 정확하게 반영하지 못할 수도 있다는 점을 기억하는 것도 중요합니다. 
 
-전년 대비 비교 수치와 인플레이션 
 
-##
+
+## 전년 대비 비교 수치와 인플레이션 
 
 그런 다음 대화는 전년 대비 디스인플레이션과 리인플레이션의 가능성으로 옮겨갑니다. Michael에 따르면, 작년 7월의 제로 인플레이션과 쉽게 비교할 수 있는 점을 고려할 때 현재로서는 디스인플레이션이 발생할 가능성은 낮아 보인다고 합니다. 전년 대비 인플레이션율은 6월의 3%에서 7월에는 3.2% 또는 3.3%로 상승할 것으로 예상됩니다. 에너지 가격이 헤드라인 인플레이션에 미치는 영향은 아직 불확실하지만, 앞으로 몇 달 안에 영향을 미칠 것으로 예상됩니다. 
 
@@ -38,9 +38,9 @@ tags:
 
 연방준비제도이사회(FED)는 헤드라인 인플레이션보다 근원 인플레이션에 더 관심을 두고 있습니다. 전월 대비 진행 상황을 중요하게 생각하며, 0.5.4%에서 0.2%로 하락했습니다. 이번 달 전망치도 0.2%로, 연준은 이를 진전으로 간주할 것입니다. 이번 논의에서는 CPI에서 주택 및 자동차 가격의 안정성에 대해서도 다룹니다. 주택 가격은 서서히 하락하고 있지만 최근 채권 시장 변화와 모기지 비용 증가의 영향이 시스템에 반영되는 데 시간이 걸릴 수 있습니다. 중고차 가격은 전년 대비 11.6% 하락하는 등 큰 폭의 하락세를 보이고 있습니다. 
 
-일반 소비자의 인플레이션에 대한 인식 
 
-##
+
+## 일반 소비자의 인플레이션에 대한 인식 
 
 마이클은 일반 소비자들이 인플레이션을 경제학자와 다르게 인식한다는 사실을 인정합니다. 경제학자들은 단기적인 변화에 초점을 맞추는 반면, 소비자들은 이전 해와 가격을 비교합니다. 따라서 일반 소비자는 1~2년 전과 비교했을 때 물가가 상승했다고 느낄 수 있습니다. 
 
