--- a/_posts/2023-08-17-8837-ko.md
+++ b/_posts/2023-08-17-8837-ko.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "미디어의 신기루를 벗기다: 금융 미디어가 투자자를 오도하는 방법 WeWork 사례 연구 "
+title: "금융 미디어가 투자자를 오도하는 방법 WeWork 사례 연구 "
 author: "Trendy Wolf"
 header-style: text
 lang: en
