--- a/_posts/2023-08-26-4272-ko.md
+++ b/_posts/2023-08-26-4272-ko.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "시장 안정성 해독하기: 유가 상승에 따른 소매업의 혼조세와 에너지 섹터의 투자 기회 "
+title: "유가 상승에 따른 소매업의 혼조세와 에너지 섹터의 투자 기회 "
 author: "Trendy Wolf"
 header-style: text
 lang: en
@@ -19,10 +19,7 @@ tags:
 
 
 
-
-수익률과 시장 안정성의 영향 
-
-##
+## 수익률과 시장 안정성의 영향 
 
 리테일 부문은 10년물 수익률의 영향을 많이 받는데, 최근 '데드캣 바운스'라고 불리는 현상이 나타나고 있습니다. 이러한 상승에도 불구하고 시장은 안정성을 유지하고 있습니다. 이는 추가 인상에 대한 기대감과 파월 의장의 금리 인상 발언에 기인한 것으로 보입니다. 현재 시장 상황도 데드캣 바운스로 볼 수 있지만 앞으로 몇 주 안에 이 패턴이 사라질 것으로 예상됩니다. 
 
