--- a/_posts/2023-09-04-8682-ko.md
+++ b/_posts/2023-09-04-8682-ko.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "AI 협상의 미래: 인간 상호 작용 강화"
+title: ""팩텀 AI의 혁신, 협상 프로세스에서 AI가 가져오는 긍정적 변화와 미래 전망""
 author: "Trendy Wolf"
 header-style: text
 lang: en
